syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.proto.rpcdata;


message GetOrderbook{
    message Req {}
    message Res {}
}